UGACT-562 Fix CSS navigation issue on safari
* Adjust css to fix navigation issue on safari

--- a/src/06-components/organisms/navigation-v2/navigation-v2-mixin.scss
+++ b/src/06-components/organisms/navigation-v2/navigation-v2-mixin.scss
@@ -209,7 +209,7 @@ $header-height: 71px;
       position: absolute;
       outline: 0;
       right: 0;
-      margin-top: 6px;
+      margin-top: 4px;
       margin-right: $L;
       width: 12px;
       height: 12px;
@@ -221,7 +221,7 @@ $header-height: 71px;
       color: $symbol-highlighted;
 
       &::after {
-        background-image: url($flyout-arrow-highlighted);
+        background-image: url($flyout-arrow-highlighted) no-repeat center center;
       }
     }
   }
@@ -234,7 +234,7 @@ $header-height: 71px;
 
     &.open .title::after,
     .title:hover::after {
-      background-image: url($flyout-arrow-highlighted);
+      background-image: url($flyout-arrow-highlighted) no-repeat center center;
     }
 
     &.open {
@@ -424,9 +424,10 @@ $header-height: 71px;
 
     .title {
       padding-right: 18px;
+      margin-right: 4px;
 
       &::after {
-        margin-right: 0;
+        margin-right: 4px;
       }
     }
 
